*SVN*

* BufferedLogger#auto_flushing = N flushes the log every N messages. Buffers with an array instead of string.  [Jeremy Kemper]

* Fixed Date#xmlschema for dates outside the range of what can be created with Time #9744 [gbuesing]


*2.0.0 [Preview Release]* (September 29th, 2007)

* Fixed that La Paz was included in -25200 and -14400 offsets when it should only be in -14400 #9735 [bermi]

* Fixed JSON encoding to use quoted keys according to the JSON standard #8762 [choonkat/chuyeow]

* Alias Object#send to send! for Ruby 1.9 forward compatibility.  [Jeremy Kemper]

* Backport Object#instance_variable_defined? for Ruby < 1.8.6.  [Jeremy Kemper]

* BufferedLogger#add converts the message to a string.  #9702, #9724 [eigentone, DrMark, tomafro]

* Added ActiveSupport::BufferedLogger as a duck-typing alternative (albeit with no formatter) to the Ruby Logger, which provides a very nice speed bump (inspired by Ezra's buffered logger) [DHH]

* Object#instance_exec produces fewer garbage methods.  [Mauricio Fernandez]

* Decode json strings as Dates/Times if they're using a YAML-compatible format.  Closes #9614 [Rick]

* Fixed cache_page to use the request url instead of the routing options when picking a save path #8614 [josh]

* Object.subclasses_of includes anonymous subclasses.  [Jeremy Kemper]

* Fixed that pluralizing an empty string should return the same empty string, not "s" #7720 [josh]

* Added call to inspect on non-string classes for the logger #8533 [codahale]

* Deprecation: remove deprecated :mday option from Time, Date, and DateTime#change.  [Jeremy Kemper]

* Fix JSON decoder with nested quotes and commas.  #9579 [zdennis]

* Hash#to_xml doesn't double-unescape.  #8806 [Ezran]

* Added Array#rand #9170 [norbert]. Examples:

    [].rand       # => nil
    ['a'].rand    # => 'a'
    [1,2,3].rand  # => 1 or 2 or 3

* Deprecation: removed Reloadable.  [Jeremy Kemper]
