@@ -1,5 +1,5 @@
 class Date
-  def to_json #:nodoc:
+  def to_json(options = nil) #:nodoc:
     %("#{strftime("%m/%d/%Y")}")
   end
 end
