@@ -1,5 +1,5 @@
 module Enumerable
-  def to_json #:nodoc:
-    "[#{map { |value| ActiveSupport::JSON.encode(value) } * ', '}]"
+  def to_json(options = {}) #:nodoc:
+    "[#{map { |value| ActiveSupport::JSON.encode(value, options) } * ', '}]"
   end
 end
