@@ -1,5 +1,5 @@
 class FalseClass
-  def to_json #:nodoc:
+  def to_json(options = nil) #:nodoc:
     'false'
   end
 end
