@@ -1,5 +1,5 @@
 class NilClass
-  def to_json #:nodoc:
+  def to_json(options = nil) #:nodoc:
     'null'
   end
 end
