@@ -1,5 +1,5 @@
 class Numeric
-  def to_json #:nodoc:
+  def to_json(options = nil) #:nodoc:
     to_s
   end
 end
