@@ -1,10 +1,6 @@
 class Object
   # Dumps object in JSON (JavaScript Object Notation).  See www.json.org for more info.
-  #
-  #   Account.find(1).to_json
-  #   => "{attributes: {username: \"foo\", id: \"1\", password: \"bar\"}}"
-  #
-  def to_json
-    ActiveSupport::JSON.encode(instance_values)
+  def to_json(options = {})
+    ActiveSupport::JSON.encode(instance_values, options)
   end
 end
