@@ -1,5 +1,5 @@
 class Regexp
-  def to_json #:nodoc:
+  def to_json(options = nil) #:nodoc:
     inspect
   end
 end
