@@ -1,5 +1,5 @@
 class Symbol
-  def to_json #:nodoc:
-    ActiveSupport::JSON.encode(to_s)
+  def to_json(options = {}) #:nodoc:
+    ActiveSupport::JSON.encode(to_s, options)
   end
 end
