@@ -1,5 +1,5 @@
 class TrueClass
-  def to_json #:nodoc:
+  def to_json(options = nil) #:nodoc:
     'true'
   end
 end
