@@ -17,9 +17,9 @@ module ActiveSupport
       REFERENCE_STACK_VARIABLE = :json_reference_stack #:nodoc:
 
       # Converts a Ruby object into a JSON string.
-      def encode(value)
+      def encode(value, options = {})
         raise_on_circular_reference(value) do
-          value.send(:to_json)
+          value.send(:to_json, options)
         end
       end
 
